--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -25,8 +25,8 @@
 
 .form-image__image {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 25%;
+    height: auto;
 }
 
 .form-image__button {
