--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -7,57 +7,91 @@ html {
 }
 
 .header {
+    width: 100%;
+    height: 80px;
     margin-bottom: 40px;
+    position: fixed;
+    z-index: 1000;
+    background-color: #000;
 }
 
 .header-inner {
-    height: 80px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #000;
 }
 
 .header-inner__title {
     width: 25%;
+    height: 100%;
     margin-left: 40px;
 }
 
 .title-a {
     width: 100%;
+    height: 100%;
     text-decoration: none;
 }
 
 .title-image {
     width: 100%;
+    height: 100%;
 }
 
 .header-inner__search {
     width: 40%;
-    height: 32px;
+    height: 100%;
     display: flex;
     justify-content: row;
+    align-items: center;
     gap: 20px;
 }
 
 .search-input {
-    width: 80%;
-    height: inherit;
+    width: 60%;
+    height: 32px;
 }
 
-.header-button {
-    width: 20%;
-    height: inherit;
+.search-button {
+    width: 10%;
+    height: 32px;
+}
+
+.responsive_btn {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    margin: 0 40px 0 0;
+    cursor: pointer;
+    position: relative;
+    z-index: 1000;
+}
+
+.menu_line {
+    background: #fff;
+    border-radius: 5px;
+    width: 100%;
+    height: 5px;
+    margin: 4px 0;
 }
 
 .header-inner__nav {
     width: 20%;
+    height: 100%;
 }
 
 .nav-list {
     width: 100%;
+    height: 100%;
+    margin: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-item__button {
@@ -77,47 +111,39 @@ html {
     color: #fff;
 }
 
-/* @media screen and (max-width: 480px) {
-    .header {
-        margin-bottom: 20px;
-    }
-
+@media screen and (max-width: 850px) {
     .header-inner {
-        display: block;
-        height: auto;
+        position: relative;
     }
 
     .header-inner__title {
-        width: 100%;
-        margin-bottom: 10px;
-        margin-left: 0;
-        display: flex;
-        justify-content: center;
-        text-align: center;
+        width: 25%;
+        margin-left: 20px;
     }
 
-    .title-a {
-        width: 50%;
-        display: inline-block;
-        text-decoration: none;
+    .responsive_btn {
+        display: flex;
     }
 
-    .header-inner__search {
-        width: 50%;
-        height: auto;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        gap: 0;
+    .header-inner__nav.menu_active {
+        right: 0;
     }
 
     .header-inner__nav {
-        width: 100%;
+        width: 20%;
+        height: 100vh;
+        background: #000;
+        position: fixed;
+        top: 0;
+        right: -100vw;
+        transition: .5s;
+        z-index: 1000;
     }
 
     .nav-list {
-        margin: 0;
-        justify-content: flex-end;
-        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 20px;
     }
-} */
+}
