--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -66,3 +66,12 @@
     font-size: 15px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 850px) {
+    .product-main {
+        margin: 20px 40px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+}
