--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -63,10 +63,6 @@
     gap: 20px;
 }
 
-/* .product__item--none {
-    text-align: center;
-} */
-
 .product-item {
     width: 100%;
     height: 320px;
@@ -124,4 +120,13 @@
     outline: none;
     background: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 850px) {
+    .product-main {
+        margin: 20px 40px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
 }
