--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -10,8 +10,8 @@ html {
     width: 100%;
     height: 80px;
     margin-bottom: 40px;
-    position: fixed;
-    z-index: 1000;
+    /* position: fixed;
+    z-index: 1000; */
     background-color: #000;
 }
 
