--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -21,13 +21,13 @@
 .product-main {
     margin: 20px 40px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
 }
 
 .product-item {
     width: 100%;
-    height: 320px;
+    height: auto;
 }
 
 .product-item__a {
@@ -65,13 +65,4 @@
     color: #000;
     font-size: 15px;
     font-weight: bold;
-}
-
-@media screen and (max-width: 850px) {
-    .product-main {
-        margin: 20px 40px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-    }
 }
