--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -59,7 +59,7 @@
 .product-main {
     margin: 20px 40px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
 }
 
