--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,4 +1,7 @@
-html {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     scroll-behavior: smooth;
 }
 
@@ -9,7 +12,6 @@ html {
 .header {
     width: 100%;
     height: 80px;
-    margin-bottom: 40px;
     background-color: #000;
 }
 
@@ -92,21 +94,21 @@ html {
     align-items: center;
 }
 
-.nav-item__button {
-    padding: 0;
-    border: none;
-    outline: none;
-    background: none;
-    font-weight: bold;
+.nav-item__form {
+    display: inline;
     color: #fff;
-    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-item__a {
     text-decoration: none;
     font-size: 15px;
     font-weight: bold;
+    background: none;
+    border: none;
     color: #fff;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 850px) {
